<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pick \'em</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register an Account</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_user_home">Pick \'em Home</string>
    <string name="title_activity_picks">PicksActivity</string>
    <string name="title_activity_make_picks">MakePicksActivity</string>
    <string name="title_activity_join_pool">Join a Pool</string>
    <string name="title_activity_create_pool">Create a Pool</string>
    <string name="MainActivity_Login">Log In</string>
    <string name="MainActivity_Register">Register</string>
    <string name="MainActivity_Username">Username</string>
    <string name="MainActivity_Password">Password</string>
    <string name="RegisterActivity_FirstName">First Name</string>
    <string name="RegisterActivity_LastName">Last Name</string>
    <string name="RegisterActivity_Username">Username</string>
    <string name="RegisterActivity_Password">Password</string>
    <string name="RegisterActivity_PasswordConf">Confirm Password</string>
    <string name="RegisterActivity_Email">Email Address</string>
    <string name="RegisterActivity_Submit">Submit</string>
    <string name="cancel_button">  Cancel  </string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_pools">PoolsActivity</string>
    <string name="title_pools_spinner">Spinner</string>
    <string name="submit_picks_button">Submit Picks</string>
    <string name="pool_name">Pool Name</string>
    <string name="submission_deadline">Deadline to Submit Picks?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string> 
    <string name="deadline_kickoff">Kickoff</string>
    <string name="deadline_custom">Custom</string>
    <string name="privatePool_check">Private?</string>
    <string name="pool_password">Enter Password</string>
    <string name="ACC">ACC</string>
    <string name="SEC">SEC</string>
    <string name="createPool_button">Create Pool</string>
    <string name="conferenceChoice_prompt">What conferences would you like your pool to pick from?</string>
    
    <string name="stats_username">Username</string>
    <string name="stats_rank">Rank: </string>
    <string name="stats_seasonRecord">Season Record: </string>
    <string name="stats_allTimeRecord">All Time Record: </string>
    
    <string name="logoDescription">Pickem Logo</string>
    
     <string-array name="color_array">  
     <item>Yellow</item>   
     <item>Pink</item>    
     <item>Purple</item>  
     <item>Red</item>       
   </string-array> 
        <string-array name="conferences">  
     <item>All</item>   
     <item>ACC</item>    
     <item>SEC</item>  
   </string-array>   
   
            <!-- Strings related to picks fragment-->
    <string name="team_clemson">Clemson</string>
    <string name="team_bosCol">Boston College</string>
    <string name="team_fsu">Florida State</string>
    <string name="team_ufl">Florida</string>
    <string name="team_dukeU">Duke</string>
    <string name="team_gaTech">Georgia Tech</string>
    <string name="team_miami">Miami</string>
    <string name="team_unc">North Carolina</string>
    <string name="team_ncState">North Carolina State</string>
    <string name="team_virginia">Virginia</string>
    <string name="team_vaTech">Virginia Tech</string>
    <string name="team_wakeForest">Wake Forest</string>
    <string name="team_georgia">Georgia</string>
    <string name="team_kentucky">Kentucky</string>
    <string name="team_missouri">Missouri</string>
 	<string name="team_southCar">South Carolina</string>
 	<string name="team_tennessee">Tennessee</string>
 	<string name="team_vanderbilt">Vanderbilt</string>
 	<string name="team_alabama">Alabama</string>
 	<string name="team_auburn">Auburn</string>
    <string name="team_laState">Louisiana State</string>
    <string name="team_oleMiss">Mississippi</string>
    <string name="team_msstate">Mississippi State</string>
    <string name="team_texasAM">Texas A+M</string>
    <string name="team_arkansas">Arkansas</string>
    <string name="team_maryland">Maryland</string>

</resources>
