<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/create_pool_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pool_name" />

        <EditText
            android:id="@+id/create_pool_name_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/create_pool_deadline_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/submission_deadline" />
        
        

        <EditText
            android:id="@+id/RegistrationActivity_LastName_Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="text" />
  
        <TextView
            android:id="@+id/RegistrationActivity_UsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/RegisterActivity_Username" />

        <EditText
            android:id="@+id/RegistrationActivity_Username_Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="text"/>

        <TextView
            android:id="@+id/RegistrationActivity_PasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/RegisterActivity_Password" />

        <EditText
            android:id="@+id/RegistrationActivity_Password_Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/RegistrationActivity_ConfirmPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/RegisterActivity_PasswordConf" />

        <EditText
            android:id="@+id/RegistrationActivity_ConfirmPassword_Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        
        <TextView
            android:id="@+id/RegistrationActivity_EmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/RegisterActivity_Email" />

        <EditText
            android:id="@+id/RegistrationActivity_Email_Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/RegisterActivity_Cancel_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/RegisterActivity_Submit_Button"
        android:layout_alignBottom="@+id/RegisterActivity_Submit_Button"
        android:layout_marginLeft="45dp"
        android:layout_toRightOf="@+id/RegisterActivity_Submit_Button"
        android:text="@string/cancel_button" />

    <Button
        android:id="@+id/RegisterActivity_Submit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="42dp"
        android:text="@string/RegisterActivity_Submit" />
    

</LinearLayout>
